# NasaSpaceApps2025-SCP

./: .gitignore  Dockerfile  README.md  app.py  predict.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: azure-static-web-apps-kind-mud-0d297e20f.yml  azure-static-web-apps-salmon-meadow-02bc6400f.yml
UI/frontend/: Readme.md
UI/frontend/payload/: package-lock.json  package.json
UI/frontend/payload/src/app/: page.tsx
UI/frontend/payload/src/assets/: Readme.md
UI/frontend/payload/src/components/: Engine.tsx  Entry.tsx
UI/frontend/payload/src/models/: BaseSphereModel.ts  planet.ts  space.ts  star.ts
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: model_config.yaml
dataset/: REAME.md  consolidated_names_with_planet_candidate_nonplanet.csv  relabelled_consolidated.csv
dataset/cleaning_scripts/: filteronly_names.py  split_data_set.py
dataset/lightkurve_query_scripts/: lightcurve_download.py  test_download_lightcurve.py
models/: adaboost_exoplanet.cbm  feature_scaler.pkl  randm_forest_exoplanet.joblib
scripts/: consolidate-push.py  consolidated.csv  grab-dataset-blob.py  split-datset-planet.py  test_download_lightcurve.py  upload-blob.py
scripts/feature_batches/: features_batch_0.csv
scripts/lightcurve_batches/: lc_batch_0.parquet
src/: pipeline.py
src/data/: consolidated.csv  loader.py
src/models/: adaboost_model.py  ensemble.py  randm_forest_model.py  random_forest_model.py
(+2 files in other folders)
